# plc-comm-slmp-rust

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PERF_VALIDATION_MEMO.md  README.md  REFACTOR_RESULTS.md  SECURITY.md  SLMP_MANUAL_AUDIT_REFLECTION_2026_06_13.md  TODO.md  perf-instructions.md  refactor-instructions.md  release_check.bat  run_ci.bat
.github/workflows/: ci.yml  docs.yml  release.yml  sample-build.yml
crates/slmp-node/: Cargo.toml
crates/slmp-node/src/: lib.rs
docs/: ADDRESS_FORMS.md  API_REFERENCE.md  DEVELOPMENT_HISTORY.md  DEVICE_RANGES.md  EXTENDED_DEVICE_COVERAGE_LATEST.md  GETTING_STARTED.md  GOTCHAS.md  IQF_DEVICE_RANGE_SAMPLE_VALIDATION_2026-05-03.md  IQL_DEVICE_RANGE_SAMPLE_VALIDATION_2026-05-03.md  IQL_LIVE_STRESS_VALIDATION_2026-05-03.md  IQR_DEVICE_RANGE_SAMPLE_VALIDATION_2026-05-03.md  IQR_EXTENDED_DEVICE_COVERAGE_2026-05-29.md  LATEST_COMMUNICATION_VERIFICATION.md  LCPU_DEVICE_RANGE_SAMPLE_VALIDATION_2026-05-03.md  MIXED_BLOCK_WRITE_1406_NOTES_2026-05-03.md  PROFILES.md  QCPU_RUNTIME_RANGE_VALIDATION_2026-05-15.md  QNUDV_DEVICE_RANGE_SAMPLE_VALIDATION_2026-05-03.md  QNUDV_RUNTIME_RANGE_VALIDATION_2026-05-01.md  QNUDV_RUNTIME_RANGE_VALIDATION_2026-05-15.md  QNU_RUNTIME_RANGE_VALIDATION_2026-05-15.md  RECIPES.md  SUPPORTED_REGISTERS.md  USAGE_GUIDE.md
docs_backup/: README.md
docs_backup/docs/: DEVICE_RANGES.md  IQL_EXTENDED_DEVICE_COVERAGE_2026-05-03.md  IQR_DEVICE_RANGE_SAMPLE_VALIDATION_2026-05-03.md  IQR_EXTENDED_DEVICE_COVERAGE_2026-05-29.md  LCPU_DEVICE_RANGE_SAMPLE_VALIDATION_2026-05-03.md  MIXED_BLOCK_WRITE_1406_NOTES_2026-05-03.md  QCPU_RUNTIME_RANGE_VALIDATION_2026-05-15.md  QNUDV_RUNTIME_RANGE_VALIDATION_2026-05-15.md  QNU_RUNTIME_RANGE_VALIDATION_2026-05-15.md  RELEASE_PUBLICATION_2026-06-12.md
examples/: 01_minimal.rs  README.md  advanced_operations.rs  config_polling.example.json  config_polling.rs  connection_profile_probe.rs  device_matrix_compare.rs  device_range_catalog.rs  device_range_sample_compare.rs  extended_device_coverage.rs  iql_live_stress.rs  multi_plc_monitor.rs  named_helpers.rs  polling_reconnect.rs  raw_read_write.rs  route_validation_compare.rs
examples/common/: mod.rs
examples/operational_common/: mod.rs
examples/validation/: README.md  device_matrix_compare.rs  device_range_sample_compare.rs  extended_device_coverage.rs  iql_live_stress.rs  route_validation_compare.rs
internal_docs/maintainer/: BENCHMARK_HELPER.md  DEVELOPMENT_HISTORY.md  GITHUB_RELEASE_v2.0.0.md  QUALITY_OVERHAUL_MIGRATION.md  RELEASE_PROCESS.md
scripts/: check_no_auto_publish.ps1  check_registry_duplicate.ps1  interactive_rw_walk.py  update_slmp_profile_jsons.ps1
src/: address.rs  capability_profiles.rs  client.rs  client_rules.rs  connection_profile_probe.rs  device_range_sample.rs  device_ranges.rs  error.rs  error_codes.rs  helpers.rs  lib.rs  model.rs  route_validation.rs
tests/: cancellation.rs  client_rules_characterization.rs  concurrency.rs  cpu_operation_state.rs  device_range_catalog.rs  error_codes.rs  label_commands.rs  read_named_bit_batching.rs  remote_cpu_control.rs  repository_vectors.rs  response_correlation.rs  route_guards.rs  shared_vectors.rs
tests/fixtures/: slmp_builtin_ethernet_profiles.json  slmp_device_range_rules.json  slmp_ethernet_profiles.json
tests/shared-spec/: device_spec_vectors.json  frame_golden_vectors.json  high_level_address_normalize_vectors.json  high_level_address_parse_vectors.json
