[package]
name = "plc-comm-slmp-rust"
version = "0.1.9"
edition = "2024"
rust-version = "1.85"
description = "Async Rust SLMP client based on the plc-comm-slmp-dotnet implementation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fa-yoshinobu/plc-comm-slmp-rust"
homepage = "https://github.com/fa-yoshinobu/plc-comm-slmp-rust"
documentation = "https://docs.rs/plc-comm-slmp-rust"
keywords = ["slmp", "plc", "mitsubishi", "mcprotocol", "tokio"]
categories = ["network-programming", "asynchronous"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "examples/**",
    "tests/**",
    "docs/**",
]

[lib]
name = "plc_comm_slmp"

[features]
default = []
cli = ["dep:futures-util", "dep:serde_json", "tokio/macros", "tokio/rt-multi-thread"]

[[bin]]
name = "slmp_verify_client"
path = "src/bin/slmp_verify_client.rs"
required-features = ["cli"]

[[example]]
name = "raw_read_write"
path = "examples/raw_read_write.rs"
required-features = ["cli"]

[[example]]
name = "named_helpers"
path = "examples/named_helpers.rs"
required-features = ["cli"]

[[example]]
name = "advanced_operations"
path = "examples/advanced_operations.rs"
required-features = ["cli"]

[[example]]
name = "device_range_catalog"
path = "examples/device_range_catalog.rs"
required-features = ["cli"]

[[example]]
name = "device_matrix_compare"
path = "examples/device_matrix_compare.rs"
required-features = ["cli"]

[[example]]
name = "device_range_sample_compare"
path = "examples/device_range_sample_compare.rs"
required-features = ["cli"]

[[example]]
name = "route_validation_compare"
path = "examples/route_validation_compare.rs"
required-features = ["cli"]

[[example]]
name = "iql_live_stress"
path = "examples/iql_live_stress.rs"
required-features = ["cli"]

[workspace]
members = ["crates/slmp-node"]
default-members = ["."]
resolver = "2"

[dependencies]
async-stream = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["io-util", "net", "rt", "sync", "time"] }

[dev-dependencies]
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
