[package]
name = "plc-comm-slmp"
version = "3.1.0"
edition = "2024"
rust-version = "1.85"
description = "Async Rust SLMP client based on the plc-comm-slmp-dotnet implementation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fa-yoshinobu/plc-comm-slmp-rust"
homepage = "https://fa-yoshinobu.github.io/plc-comm-docs-site/"
documentation = "https://fa-yoshinobu.github.io/plc-comm-docs-site/slmp/rust/GETTING_STARTED/"
keywords = ["plc-comm", "slmp", "plc", "melsec", "mitsubishi"]
categories = ["network-programming", "asynchronous"]
include = [
    "Cargo.toml",
    "LICENSE",
    "CHANGELOG.md",
    "README.md",
    "src/**",
    "examples/**",
    "tests/**",
    "docs/**",
]

[lib]
name = "plc_comm_slmp"

[features]
default = []
cli = ["dep:futures-util", "dep:serde_json", "tokio/macros", "tokio/rt-multi-thread", "tokio/signal"]

[[bin]]
name = "slmp_bench_client"
path = "src/bin/slmp_bench_client.rs"
required-features = ["cli"]

[[example]]
name = "01_minimal"
path = "examples/01_minimal.rs"

[[example]]
name = "raw_read_write"
path = "examples/raw_read_write.rs"
required-features = ["cli"]

[[example]]
name = "named_helpers"
path = "examples/named_helpers.rs"
required-features = ["cli"]

[[example]]
name = "polling_reconnect"
path = "examples/polling_reconnect.rs"
required-features = ["cli"]

[[example]]
name = "multi_plc_monitor"
path = "examples/multi_plc_monitor.rs"
required-features = ["cli"]

[[example]]
name = "config_polling"
path = "examples/config_polling.rs"
required-features = ["cli"]

[[example]]
name = "advanced_operations"
path = "examples/advanced_operations.rs"
required-features = ["cli"]

[[example]]
name = "device_range_catalog"
path = "examples/device_range_catalog.rs"
required-features = ["cli"]

[[example]]
name = "device_matrix_compare"
path = "examples/validation/device_matrix_compare.rs"
required-features = ["cli"]

[[example]]
name = "extended_device_coverage"
path = "examples/validation/extended_device_coverage.rs"
required-features = ["cli"]

[[example]]
name = "device_range_sample_compare"
path = "examples/validation/device_range_sample_compare.rs"
required-features = ["cli"]

[[example]]
name = "route_validation_compare"
path = "examples/validation/route_validation_compare.rs"
required-features = ["cli"]

[[example]]
name = "iql_live_stress"
path = "examples/validation/iql_live_stress.rs"
required-features = ["cli"]

[workspace]
members = ["crates/slmp-node"]
default-members = ["."]
resolver = "2"

[dependencies]
async-stream = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["io-util", "net", "rt", "sync", "time"] }

[dev-dependencies]
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
