[package]
name = "slmp-node"
version = "1.0.2"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"
plc-comm-slmp = { path = "../.." }
serde_json = "1"

[build-dependencies]
napi-build = "2"
